--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa
     implementation 'org.springframework.boot:spring-boot-starter-web' // spring web
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6' // swagger
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15' // swagger
+    implementation 'org.springframework.boot:spring-boot-starter-security' // spring security
+    implementation 'io.jsonwebtoken:jjwt:0.9.1' //Json Web Tokens
 
     compileOnly 'org.projectlombok:lombok' // lombok
 
@@ -30,6 +32,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok' // lombok
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 
 
 }
